--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -13,24 +13,24 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: setup premake
+    - name: Setup Premake
       uses: checkraisefold/setup-premake@v2.0
       with:
         version: 5.0.0-alpha16
-    - name: run premake
+    - name: Run Premake
       run: |
         cd $GITHUB_WORKSPACE
         premake5 gmake2
-    - name: build binaries
+    - name: Build binaries
       run: |
         make config=release_linux64
         make config=debug_linux64
-    - name: upload release
+    - name: Upload release
       uses: actions/upload-artifact@v2.2.4
       with:
         name: libROBLOXLink.so
         path: bin/Release/libROBLOXLink.so
-    - name: upload debug
+    - name: Upload debug
       uses: actions/upload-artifact@v2.2.4
       with:
         name: debug_libROBLOXLink.so
