--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -23,12 +23,22 @@ jobs:
 
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1.0.2
+      
+    - name: Setup Premake
+      uses: checkraisefold/setup-premake@v2.0
+      with:
+        version: 5.0.0-alpha16
+        
+    - name: Run Premake
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      run: |
+        premake5 gmake2
 
     - name: Restore NuGet packages
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: nuget restore ${{env.SOLUTION_FILE_PATH}}
 
-    - name: Build
+    - name: Build binaries
       working-directory: ${{env.GITHUB_WORKSPACE}}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
@@ -39,9 +49,11 @@ jobs:
       with:
         name: ROBLOXLink.dll
         path: bin/Release/ROBLOXLink.dll
+      if: ${{ matrix.configuration == "Release" }}
         
     - name: Upload debug
       uses: actions/upload-artifact@v2.2.4
       with:
         name: debug_ROBLOXLink.dll
         path: bin/Debug/ROBLOXLink.dll
+      if: ${{ matrix.configuration == "Debug" }}
