--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Restore NuGet packages
       working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: nuget restore
+      run: nuget restore ../
 
     - name: Build binaries
       working-directory: ${{env.GITHUB_WORKSPACE}}
