Fix macos build

--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -32,11 +32,11 @@ jobs:
     - name: Upload release
       uses: actions/upload-artifact@v2.2.4
       with:
-        name: ROBLOXLink.so
-        path: bin/Release/ROBLOXLink.so
+        name: ROBLOXLink.dylib
+        path: bin/Release/libROBLOXLink.dylib
         
     - name: Upload debug
       uses: actions/upload-artifact@v2.2.4
       with:
-        name: debug_ROBLOXLink.so
-        path: bin/Debug/ROBLOXLink.so
+        name: debug_ROBLOXLink.dylibd
+        path: bin/Debug/ROBLOXLink.dylib
