--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -75,10 +75,6 @@ jobs:
         path: bin/Debug/libROBLOXLink.dylib
  build-windows:
     runs-on: windows-latest
-    
-    strategy:
-      matrix:
-        configuration: [Release, Debug]
         
     steps:
     - uses: actions/checkout@v2
@@ -99,7 +95,9 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild /m /p:Configuration=${{matrix.configuration}} .
+      run: |
+        msbuild /m /p:Configuration=Release .
+        msbuild /m /p:Configuration=Debug .
       
     - name: Upload release
       uses: actions/upload-artifact@v2.2.4
