--- a/.gitignore
+++ b/.gitignore
@@ -367,6 +367,6 @@ premake5.exe
 
 # Solution files (gen with premake)
 Makefile
-ROBLOXLink.make
-ROBLOXLink.sln
-ROBLOXLink.vcxproj
+*.make
+*.sln
+*.vcxproj
